--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,6 @@
-
-
-/*# sourceMappingURL=header.css.map */
+.header {
+  height: 40px;
+  width: 100%;
+  padding-top: 4px;
+  background-color: #f7f7f7;
+}
